# AuthenticationDjangoTest

./: README.md  pyproject.toml  requirements.txt
mysite/: db.sqlite3
mysite/blog/: urls.py  views.py
mysite/blog/templates/blog/: base.html  home.html  login.html  register.html
mysite/mysite/: settings.py
