[project]
name = "authenticationsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "ConveningMoon",email = "dj.vergara@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref (==3.8.1)",
    "crispy-bootstrap4 (==2024.10)",
    "django (==5.2)",
    "django-crispy-forms (==2.4)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
